--- a/package.json
+++ b/package.json
@@ -1,28 +1,27 @@
 {
-  "name": "MSDS",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
-  },
-  "dependencies": {
-    "native-base": "^2.1.4",
-    "react-native-elements": "^0.12.2",
-    "react-native-vector-icons": "^4.1.1",
-    "react-navigation": "^1.0.0-beta.11"
-  },
-  "devDependencies": {
-    "babel-jest": "20.0.3",
-    "babel-preset-react-native": "1.9.2",
-    "jest": "20.0.3",
-    "react-test-renderer": "16.0.0-alpha.6"
-  },
-  "jest": {
-    "preset": "react-native"
-  },
-  "peerDependencies": {
-    "react": "16.0.0-alpha.6",
-    "react-native": "0.44.0"
-  }
+	"name": "MSDS",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"start": "node node_modules/react-native/local-cli/cli.js start",
+		"test": "jest"
+	},
+	"dependencies": {
+		"axios": "^0.16.2",
+		"firebase": "^4.1.3",
+		"native-base": "^2.2.1",
+		"react": "16.0.0-alpha.12",
+		"react-native": "0.46.1",
+		"react-native-elements": "^0.14.0",
+		"react-navigation": "^1.0.0-beta.11"
+	},
+	"devDependencies": {
+		"babel-jest": "20.0.3",
+		"babel-preset-react-native": "2.1.0",
+		"jest": "20.0.4",
+		"react-test-renderer": "16.0.0-alpha.12"
+	},
+	"jest": {
+		"preset": "react-native"
+	}
 }
