--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,3 +1,5 @@
 rootProject.name = 'MSDS'
+include ':react-native-fs'
+project(':react-native-fs').projectDir = new File(projectDir, '../node_modules/react-native-fs/android')
 
 include ':app'
