--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.46.1",
 		"react-native-elements": "^0.14.0",
+		"react-native-fs": "^2.3.3",
 		"react-navigation": "^1.0.0-beta.11"
 	},
 	"devDependencies": {
